Update readme with color of the theme

--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -1,7 +1,7 @@
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>ShoppingList</ion-title>
+  <ion-navbar color="">
+    <ion-title>Shopping List</ion-title>
   </ion-navbar>
 
 </ion-header>
