--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -1,7 +1,12 @@
 <ion-header>
 
-  <ion-navbar color="">
+  <ion-navbar color="primary">
     <ion-title>Shopping List</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only>
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
