--- a/src/pages/add-shopping/add-shopping.html
+++ b/src/pages/add-shopping/add-shopping.html
@@ -11,14 +11,14 @@
 
   <ion-item>
     <ion-label floating>Item Name</ion-label>
-    <ion-input type="text"></ion-input>
+    <ion-input type="text" [(ngModel)]="shoppingItem.itemName"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label floating>Number</ion-label>
-    <ion-input type="number"></ion-input>
+    <ion-input type="number" [(ngModel)]="shoppingItem.itemNumber"></ion-input>
   </ion-item>
 
-  <button color="light-primary" ion-button block>Add Item</button>
+  <button color="light-primary" ion-button block (click)="addShoppingItem()">Add Item</button>
 
 </ion-content>
