--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -13,5 +13,10 @@
 
 
 <ion-content padding>
-
+  <ion-list>
+    <ion-item *ngFor="let item of shoppingList | async">
+      <h2 ion-text color="dark-primary" >Item Name: {{item.itemName}}</h2>
+      <h3  ion-text color="light-primary"  >Amount: {{item.itemNumber}}</h3>
+    </ion-item>
+  </ion-list>
 </ion-content>
